--- a/IS413_Project1_Scheduler/IS413_Project1_Scheduler.csproj
+++ b/IS413_Project1_Scheduler/IS413_Project1_Scheduler.csproj
@@ -18,5 +18,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\ViewModels\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 </Project>
